--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
         "styled-system": "^5.1.2"
     },
     "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
+        "@babel/preset-react": "^7.12.10",
         "@types/express": "^4.17.6",
         "@types/react": "^16.14.2",
         "@types/react-dom": "^16.9.10",
+        "cypress": "^6.2.1",
         "nodemon": "^2.0.6",
         "rimraf": "^3.0.2",
-        "ts-loader": "^7.0.5",
+        "ts-loader": "^8.0.13",
         "tslint": "^6.1.3",
         "tslint-config-prettier": "^1.18.0",
         "tslint-react": "^5.0.0",
