--- a/tsconfig-frontend.json
+++ b/tsconfig-frontend.json
@@ -7,7 +7,8 @@
 		"sourceMap": true,
 		"jsx": "react",
 		"strict": true,
-		"noImplicitAny": false
+		"noImplicitAny": false,
+		"types": ["cypress"]
 	},
 	"include": ["**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules", "backend"]
